--- a/MesSharp/CpkDemo/App.config
+++ b/MesSharp/CpkDemo/App.config
@@ -1,26 +1,49 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <connectionStrings>
     <!--<add name="SQLConnString3" connectionString="Data Source=172.16.191.16;Initial Catalog=cpklog;Persist Security Info=True;User ID=cpklog;Password=cpklog;"/>
+    <add name="default" connectionString="Data Source=172.16.191.16;Initial Catalog=CpkDemo;Persist Security Info=True;User ID=cpklog;Encrypt=False;Password=cpklog;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=MesDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
    -->
-    <add name="SQLConnString3" connectionString="Data Source=.;Initial Catalog=CpkDemo2;Integrated Security=True"/>
-
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HrConnString" connectionString="Data Source=172.16.191.29;Initial Catalog=EMHR;Persist Security Info=True;User ID=hruser;Password=Hr2014;"/>
+    
   </connectionStrings>
   <appSettings>
-    <add key="Excel_LOG_FROM_PATH" value="D:\\test-log\\Excel"/>
-    <add key="Excel_LOG_TO_PATH" value="D:\\test-zip\\Excel"/>
-    <add key="CSV_LOG_FROM_PATH" value="D:\\test-log\\Cvs"/>
-    <add key="CSV_LOG_TO_PATH" value="D:\\test-zip\\Cvs"/>
-    <add key="CSVNO_LOG_FROM_PATH" value="D:\\test-log\\CvsNo"/>
-    <add key="CSVNO_LOG_TO_PATH" value="D:\\test-zip\\CvsNo"/>
-    <add key="HTML_LOG_FROM_PATH" value="D:\\test-log\\Html"/>
-    <add key="HTML_LOG_TO_PATH" value="D:\\test-zip\\Html"/>
-    <add key="Cpk_LOG_FROM_PATH" value="D:\\test-log\\CPK3"/>
-    <add key="Cpk_LOG_TO_PATH" value="D:\\test-zip\\CPK"/>
-    <add key="SYS_LOG_PATH" value="D:\\test-zip"/>
+    <add key="Excel_LOG_FROM_PATH" value="D:\\test-log\\Excel" />
+    <add key="Excel_LOG_TO_PATH" value="D:\\test-zip\\Excel" />
+    <add key="CSV_LOG_FROM_PATH" value="D:\\test-log\\Cvs" />
+    <add key="CSV_LOG_TO_PATH" value="D:\\test-zip\\Cvs" />
+    <add key="CSVNO_LOG_FROM_PATH" value="D:\\test-log\\CvsNo" />
+    <add key="CSVNO_LOG_TO_PATH" value="D:\\test-zip\\CvsNo" />
+    <add key="HTML_LOG_FROM_PATH" value="D:\\test-log\\Html" />
+    <add key="HTML_LOG_TO_PATH" value="D:\\test-zip\\Html" />
+   
+    
+    <add key="Cpk_LOG_FROM_PATH" value="D:\\test-log\\CPK3" />
+    <add key="Cpk_LOG_TO_PATH" value="D:\\test-zip\\CPK" />
+    <add key="Cpk_ERROR_PATH" value="D:\\Error\\CPK" />
+    <add key="Test_LOG_FROM_PATH" value="D:\\test-log\\TESTLOG" />
+    <add key="Test_LOG_TO_PATH" value="D:\\test-zip\\TESTLOG" />
+    <add key="Test_ERROR_PATH" value="D:\\Error\\TESTLOG" />
+    <add key="SYS_LOG_PATH" value="D:\\Error" />
     <!-- 读取 音频 XML 格式 Log-->
   </appSettings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
