--- a/MesSharp/samples/OSharp.Demo.Contracts/Mes.Demo.Contracts.csproj
+++ b/MesSharp/samples/OSharp.Demo.Contracts/Mes.Demo.Contracts.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\Hr\IHrContract.TemporaryCard.cs" />
+    <Compile Include="Contracts\Hr\IHrContract.SwipeCard.cs" />
+    <Compile Include="Contracts\TestLog\ITestLogContract.Tlog.cs" />
     <Compile Include="Contracts\TestLog\ITestLogContract.Cpk.cs" />
     <Compile Include="Contracts\TestLog\ITestLogContract.OperationLog.cs" />
     <Compile Include="Contracts\IIdentityContract.cs" />
@@ -62,6 +65,9 @@
     </Compile>
     <Compile Include="Contracts\Test\ITestContract.Line.cs" />
     <Compile Include="Contracts\Test\ITestContract.Station.cs" />
+    <Compile Include="Dtos\Hr\SwipeCardDto.cs" />
+    <Compile Include="Dtos\Hr\TemporaryCardDto.cs" />
+    <Compile Include="Dtos\TestLog\TlogDto.cs" />
     <Compile Include="Dtos\TestLog\CpkDto.cs" />
     <Compile Include="Dtos\TestLog\OperationLogDto.cs" />
     <Compile Include="Dtos\DtoMappers.cs" />
@@ -78,6 +84,11 @@
     </Compile>
     <Compile Include="Dtos\Test\LineDto.cs" />
     <Compile Include="Dtos\Test\StationDto.cs" />
+    <Compile Include="Models\Hr\DoorIoType.cs" />
+    <Compile Include="Models\Hr\SwipeCard.cs" />
+    <Compile Include="Models\Hr\TemporaryCard.cs" />
+    <Compile Include="Models\TestLog\LogFileType.cs" />
+    <Compile Include="Models\TestLog\Tlog.cs" />
     <Compile Include="Models\TestLog\TestReslut.cs" />
     <Compile Include="Models\TestLog\Cpk.cs" />
     <Compile Include="Models\TestLog\OperationLog.cs" />
