--- a/MesSharp/samples/OSharp.Demo.Consoles/App.config
+++ b/MesSharp/samples/OSharp.Demo.Consoles/App.config
@@ -11,6 +11,7 @@
   </appSettings>
   <connectionStrings>
     <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HrConnString" connectionString="Data Source=.;Initial Catalog=hr;Integrated Security=True"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
