--- a/MesSharp/CpkDemo/App.config
+++ b/MesSharp/CpkDemo/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -11,10 +11,12 @@
     <!--<add name="SQLConnString3" connectionString="Data Source=172.16.191.16;Initial Catalog=cpklog;Persist Security Info=True;User ID=cpklog;Password=cpklog;"/>
     <add name="default" connectionString="Data Source=172.16.191.16;Initial Catalog=CpkDemo;Persist Security Info=True;User ID=cpklog;Encrypt=False;Password=cpklog;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=MesDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-   -->
+     <add name="default" connectionString="Data Source=172.16.191.73;Initial Catalog=MesDemo2;Persist Security Info=True;User ID=MesDemo2;Encrypt=False;Password=6221131;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
-    <add name="HrConnString" connectionString="Data Source=172.16.191.29;Initial Catalog=EMHR;Persist Security Info=True;User ID=hruser;Password=Hr2014;"/>
-    
+  -->
+    <add name="default" connectionString="Data Source=172.16.191.73;Initial Catalog=MesDemo2;Persist Security Info=True;User ID=MesDemo2;Encrypt=False;Password=6221131;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HrConnString" connectionString="Data Source=172.16.191.29;Initial Catalog=EMHR;Persist Security Info=True;User ID=hruser;Password=Hr2014;" />
+    <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
   </connectionStrings>
   <appSettings>
     <add key="Excel_LOG_FROM_PATH" value="D:\\test-log\\Excel" />
@@ -25,8 +27,6 @@
     <add key="CSVNO_LOG_TO_PATH" value="D:\\test-zip\\CvsNo" />
     <add key="HTML_LOG_FROM_PATH" value="D:\\test-log\\Html" />
     <add key="HTML_LOG_TO_PATH" value="D:\\test-zip\\Html" />
-   
-    
     <add key="Cpk_LOG_FROM_PATH" value="D:\\test-log\\CPK3" />
     <add key="Cpk_LOG_TO_PATH" value="D:\\test-zip\\CPK" />
     <add key="Cpk_ERROR_PATH" value="D:\\Error\\CPK" />
@@ -35,6 +35,8 @@
     <add key="Test_ERROR_PATH" value="D:\\Error\\TESTLOG" />
     <add key="SYS_LOG_PATH" value="D:\\Error" />
     <!-- 读取 音频 XML 格式 Log-->
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="ClientSettingsProvider.ConnectionStringName" value="DefaultConnection" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -46,4 +48,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientWindowsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" connectionStringName="DefaultConnection" credentialsProvider="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" connectionStringName="DefaultConnection" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
