--- a/MesSharp/CpkDemo/packages.config
+++ b/MesSharp/CpkDemo/packages.config
@@ -2,8 +2,11 @@
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Mafly.Mail" version="1.0.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
+  <package id="Quartz" version="2.3.3" targetFramework="net45" />
 </packages>
