增加仓库管理功能

--- a/MesSharp/CpkDemo/App.config
+++ b/MesSharp/CpkDemo/App.config
@@ -14,19 +14,11 @@
      <add name="default" connectionString="Data Source=172.16.191.73;Initial Catalog=MesDemo2;Persist Security Info=True;User ID=MesDemo2;Encrypt=False;Password=6221131;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
   -->
-    <add name="default" connectionString="Data Source=172.16.191.73;Initial Catalog=MesDemo2;Persist Security Info=True;User ID=MesDemo2;Encrypt=False;Password=6221131;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
     <add name="HrConnString" connectionString="Data Source=172.16.191.29;Initial Catalog=EMHR;Persist Security Info=True;User ID=hruser;Password=Hr2014;" />
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
   </connectionStrings>
   <appSettings>
-    <add key="Excel_LOG_FROM_PATH" value="D:\\test-log\\Excel" />
-    <add key="Excel_LOG_TO_PATH" value="D:\\test-zip\\Excel" />
-    <add key="CSV_LOG_FROM_PATH" value="D:\\test-log\\Cvs" />
-    <add key="CSV_LOG_TO_PATH" value="D:\\test-zip\\Cvs" />
-    <add key="CSVNO_LOG_FROM_PATH" value="D:\\test-log\\CvsNo" />
-    <add key="CSVNO_LOG_TO_PATH" value="D:\\test-zip\\CvsNo" />
-    <add key="HTML_LOG_FROM_PATH" value="D:\\test-log\\Html" />
-    <add key="HTML_LOG_TO_PATH" value="D:\\test-zip\\Html" />
     <add key="Cpk_LOG_FROM_PATH" value="D:\\test-log\\CPK3" />
     <add key="Cpk_LOG_TO_PATH" value="D:\\test-zip\\CPK" />
     <add key="Cpk_ERROR_PATH" value="D:\\Error\\CPK" />
