--- a/MesSharp/samples/WindowsServiceTest/app.config
+++ b/MesSharp/samples/WindowsServiceTest/app.config
@@ -1,3 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <!--<add name="SQLConnString3" connectionString="Data Source=172.16.191.16;Initial Catalog=cpklog;Persist Security Info=True;User ID=cpklog;Password=cpklog;"/>
+    <add name="default" connectionString="Data Source=172.16.191.16;Initial Catalog=CpkDemo;Persist Security Info=True;User ID=cpklog;Encrypt=False;Password=cpklog;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=MesDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+     <add name="default" connectionString="Data Source=172.16.191.73;Initial Catalog=MesDemo2;Persist Security Info=True;User ID=MesDemo2;Encrypt=False;Password=6221131;Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+  -->
+    <add name="default" connectionString="Data Source=.; Integrated Security=True; Initial Catalog=CpkDemo2; Pooling=True; MultipleActiveResultSets=True;" providerName="System.Data.SqlClient" />
+    <add name="HrConnString" connectionString="Data Source=172.16.191.29;Initial Catalog=EMHR;Persist Security Info=True;User ID=hruser;Password=Hr2014;" />
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+</configuration>
